--- a/blog/index.njk
+++ b/blog/index.njk
@@ -3,7 +3,7 @@ title: "Blog"
 override:tags: []
 layout: "page.njk"
 pagination: {
-	data: collections.blog,
+	data: collections.publishedPosts,
 	size: 15,
 	reverse: true
 }
