--- a/_includes/page.njk
+++ b/_includes/page.njk
@@ -99,9 +99,9 @@
 		{% endif %}
 	</div>
 
-	{% if is_post and false %}
-		{% set previousPost = collections.blog | getPreviousCollectionItem %}
-		{% set nextPost = collections.blog | getNextCollectionItem %}
+	{% if is_post %}
+		{% set previousPost = collections.publishedPosts | getPreviousCollectionItem(page) %}
+		{% set nextPost = collections.publishedPosts | getNextCollectionItem(page) %}
 		{% if previousPost or nextPost %}
 		<div class="prev-next">
 			{% if previousPost %}<a href="{{ previousPost.url }}" class="prev">{{ previousPost.data.title }}</a>{% endif %}
