--- a/_includes/page.njk
+++ b/_includes/page.njk
@@ -100,13 +100,15 @@
 	</div>
 
 	{% if is_post %}
-		{% set previousPost = collections.publishedPosts | getPreviousCollectionItem(page) %}
-		{% set nextPost = collections.publishedPosts | getNextCollectionItem(page) %}
+		{% set previousPost = collections.blog | getCollectionItemIndex | prev_post(collections.blog) %}
+		{% set nextPost = collections.blog | getCollectionItemIndex | next_post(collections.blog) %}
 		{% if previousPost or nextPost %}
 		<div class="prev-next">
 			{% if previousPost %}<a href="{{ previousPost.url }}" class="prev">{{ previousPost.data.title }}</a>{% endif %}
 			{% if nextPost %}<a href="{{ nextPost.url }}" class="next">{{ nextPost.data.title }}</a>{% endif %}
 		</div>
+		{% else %}
+		NOTHING
 		{% endif %}
 	{% endif %}
 </footer>
