--- a/projects/index.njk
+++ b/projects/index.njk
@@ -3,8 +3,12 @@ title: Projects
 mavo: true
 ---
 
-<p>Here you'll find a list of tools I've developed over the years to make the lives of web designers & developers easier.
-They are ordered mostly by release date, with those with the most impact featured first.
+<p>Ordered mostly by release date, with those with the most impact featured first.
+
+<p>
+Please note that this mainly contains open source tools I’ve developed, and is only a subset of my work.
+For example, it does not contain any of my work designing web technologies, documenting web platform design principles as a TAG member,
+or any of my pre-2011 entrepreneurial work.
 
 <div mv-app="projects" class="projects" mv-storage="https://github.com/leaverou/lea.verou.me/data/projects.json" mv-plugins="markdown">
 	<h2>[count(project)] projects ([count(type = &quot;lib&quot;)] libraries and [count(type = &quot;app&quot;)] apps)</h2>
