--- a/_includes/page.njk
+++ b/_includes/page.njk
@@ -10,6 +10,7 @@
 	<title>{{ title }}{% if title %} &bull; {% endif %}Lea Verou</title>
 	<link rel="shortcut icon" href="/mark.svg" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="author" content="Lea Verou">
 
 	{% if mavo %}
 	<link rel="stylesheet" href="https://get.mavo.io/mavo.css">
