--- a/assets/style.postcss
+++ b/assets/style.postcss
@@ -242,6 +242,29 @@ ul {
 	padding-left: .6em;
 }
 
+dl {
+	display: grid;
+	grid-template-columns: auto 1fr;
+	border-block: 1px solid var(--color-gray-80);
+	border-block-width: 2px 1px;
+
+	dt, dd {
+		border-block-end: 1px solid var(--color-gray-80);
+		padding: .2em 2.5em;
+	}
+
+	& dt {
+		grid-column: 1;
+		padding-inline-start: 0;
+	}
+
+	& dd {
+		grid-column: 2;
+		margin: 0;
+		padding-inline-end: 0;
+	}
+}
+
 a {
 	color: var(--color-accent);
 	text-decoration: none;
