--- a/assets/style.postcss
+++ b/assets/style.postcss
@@ -251,6 +251,10 @@ dl {
 	dt, dd {
 		border-block-end: 1px solid var(--color-gray-80);
 		padding: .2em 2.5em;
+
+		&:not(:has(p, ul, ol)) {
+			padding-block: 1em;
+		}
 	}
 
 	& dt {
