--- a/_includes/page.njk
+++ b/_includes/page.njk
@@ -11,6 +11,7 @@
 	<link rel="shortcut icon" href="/mark.svg" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="author" content="Lea Verou">
+	{% if draft or unlisted %}<meta name="robots" content="noindex">{% endif %}
 
 	{% if mavo %}
 	<link rel="stylesheet" href="https://get.mavo.io/mavo.css">
