--- a/assets/bootstrap-icons.css
+++ b/assets/bootstrap-icons.css
@@ -16,9 +16,11 @@
 	--icon-exclamation-triangle-fill: "\F33A";
 	--icon-eyeglasses: "\F343";
 	--icon-github: "\F3ED";
+	--bi-globe-americas: "\F882";
 	--icon-info-lg: "\F646";
 	--icon-link-45deg: "\F470";
 	--icon-megaphone-fill: "\F483";
+	--icon-newspaper: "\F4A3";
 	--icon-question-lg: "\F64E";
 	--icon-lightbulb-fill: "\F468";
 	--icon-rss-fill: "\F521";
