--- a/assets/style.postcss
+++ b/assets/style.postcss
@@ -38,6 +38,12 @@
 	--color-gray-90: hsl(var(--gray) 90%);
 	--color-gray-95: hsl(var(--gray) 95%);
 
+	--color-gray-40a: hsl(var(--gray) 50% / 40%);
+	--color-gray-30a: hsl(var(--gray) 50% / 30%);
+	--color-gray-20a: hsl(var(--gray) 50% / 20%);
+	--color-gray-10a: hsl(var(--gray) 50% / 10%);
+	--color-gray-5a: hsl(var(--gray) 50% / 5%);
+
 	--color-gray-medium: var(--color-gray-50);
 	--color-gray-light: var(--color-gray-90);
 
@@ -334,6 +340,11 @@ figure {
 	> p,
 	figcaption > p:only-child {
 		display: contents;
+	}
+
+	> img,
+	> p > img {
+		max-height: 75svh;
 	}
 
 	& figcaption {
@@ -1273,207 +1284,6 @@ pre:is(pre, [class*="language-"][class*="language-"]) {
 
 		.issue-number {
 			font-weight: bold;
-		}
-	}
-}
-
-.projects [mv-list][property="project"] {
-	display: flex;
-	flex-flow: column;
-	gap: 1em;
-
-	& .mv-add-project {
-		order: -5;
-	}
-}
-
-.projects article {
-	position: relative;
-	display: grid;
-	grid-template-areas: "image"
-	                     "content"
-	                     "footer";
-	grid-gap: .5em;
-	padding: 1em;
-
-	--base-font-size: 1em;
-
-	&.type-app {
-		--color: var(--color-accent);
-	}
-
-	&.type-lib {
-		--color: var(--color-accent2);
-	}
-
-	&.featured {
-		box-shadow: 0 0 0 .2em var(--color-orange);
-	}
-
-	& [property="featured"] {
-		aspect-ratio: 2 / 1;
-		position: absolute;
-		top: 0;
-		left: 0;
-		z-index: 2;
-		display: flex;
-		flex-flow: column;
-		align-items: center;
-		justify-content: flex-end;
-		width: 12ch;
-		padding-bottom: .4em;
-		box-sizing: border-box;
-		clip-path: polygon(50% 0, 100% 100%, 0 100%);
-
-		background: var(--color-orange);
-		font: bold 75%/1 var(--font-sans);
-		color: white;
-
-		transform: rotate(-45deg) translateX(-50%);
-		transform-origin: 0 0;
-
-		&::before {
-			content: "★";
-			display: block;
-			font-size: 200%;
-			text-align: center;
-			opacity: .5;
-		}
-	}
-
-	&:not([mv-mode="edit"]) {
-		order: calc(2 - var(--featured-weight, 0));
-
-		& [property="featured"][data-weight="0"] {
-			display: none;
-		}
-	}
-
-	&[mv-mode="edit"] {
-		& [property="featured"][data-weight="0"] {
-			opacity: .5;
-		}
-	}
-
-	& .image-container {
-		grid-area: image;
-		position: relative;
-		overflow: hidden;
-
-		& img {
-			width: 100%;
-			object-fit: cover;
-			object-position: top;
-
-			&.mv-empty.mv-empty.mv-empty {
-				display: block;
-				height: 100%;
-				background: radial-gradient(hsl(var(--gray) 90%), hsl(var(--gray) 60%));
-				content: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 100"><text x="50%" y=".9em" style="font: bold 80px/1 system-ui, sans-serif; text-anchor: middle; fill-opacity: .4; text-transform: uppercase">Image Coming Soon</text></svg>');
-				object-fit: contain;
-				object-position: center;
-			}
-		}
-	}
-
-	@media (min-width: 700px) {
-		grid-template-areas: "image content"
-		                     "footer footer";
-		grid-template-columns: 300px 1fr;
-
-
-		& .image-container {
-			& img {
-				position: absolute;
-				top: 0;
-				left: 0;
-				right: 0;
-				z-index: 1;
-			}
-		}
-	}
-
-	& .main-content {
-		grid-area: content;
-	}
-
-	& h3 {
-		margin: 0;
-
-		[property="type"] {
-			display: inline-block;
-			vertical-align: .3em;
-			padding: .3em .5em;
-			border-radius: .2em;
-			background: var(--color, hsl(var(--gray) 50%));
-			color: white;
-			font: bold .75rem/1.1 var(--font-sans);
-			text-transform: uppercase;
-		}
-
-		& > a {
-			color: inherit;
-		}
-
-		& .released {
-			margin-left: auto;
-			color: hsl(var(--gray) 50%);
-			font: italic calc(var(--base-font-size) * .9) var(--font-serif);
-			letter-spacing: normal;
-		}
-	}
-
-	& footer {
-		grid-area: footer;
-		display: flex;
-		flex-wrap: wrap;
-		gap: .5em;
-		align-items: center;
-
-		& > a {
-			padding: .25em 1em .25em;
-			border-radius: 999px;
-			background: hsl(var(--gray) 90%);
-			white-space: nowrap;
-			font: bold 75%/1.5 var(--font-sans);
-			text-decoration: none;
-			color: canvastext;
-
-			&::before {
-				content: var(--icon);
-				display: inline-block;
-				vertical-align: -.1em;
-				margin-right: .5em;
-				height: 1em;
-				font-family: bootstrap-icons;
-				color: var(--color-gray-50);
-			}
-
-			&[property=url] {
-				--icon: var(--icon-link-45deg);
-			}
-
-			&[property=blogPost] {
-				--icon: var(--icon-megaphone-fill);
-			}
-
-			&[property="repo"] {
-				--icon: var(--icon-github);
-			}
-
-			&:focus,
-			&:hover {
-				background: var(--color-accent);
-				color: white;
-
-				&::before {
-					color: black;
-				}
-			}
-		}
-
-		& > img {
-			margin-left: auto;
 		}
 	}
 }
