--- a/assets/style.postcss
+++ b/assets/style.postcss
@@ -1289,7 +1289,7 @@ pre:is(pre, [class*="language-"][class*="language-"]) {
 }
 
 .edit-only:not([mv-mode="edit"] *) {
-	display: none;
+	display: none !important;
 }
 
 .event {
