--- a/projects/index.njk
+++ b/projects/index.njk
@@ -16,7 +16,7 @@ or any of my pre-2011 entrepreneurial work.
 <div mv-app="projects" class="projects" mv-storage="https://github.com/leaverou/lea.verou.me/data/projects.json" mv-plugins="markdown">
 	<h2>[count(project)] projects ([count(type = &quot;lib&quot;)] libraries and [count(type = &quot;app&quot;)] apps)</h2>
 	<div mv-list class="projects-list" mv-order="desc">
-		<article property="project" class="project" mv-list-item style="--featured-weight: [featured]" class="type-[type] [if(featured &gt; 0, &quot;featured&quot;)]">
+		<article property="project" mv-list-item style="--featured-weight: [featured]" class="project type-[type] [if(featured &gt; 0, &quot;featured&quot;)]">
 			<span property="featured" mv-attribute="data-weight" mv-editor-type="range" mv-editor-min="0" mv-editor-max="5" mv-default="0">Featured</span>
 			<a href="[url]" class="image-container"><img property="image"/></a>
 			<div class="main-content">
