--- a/assets/bootstrap-icons.css
+++ b/assets/bootstrap-icons.css
@@ -7,6 +7,7 @@
 	--icon-arrow-right-circle: "\F134";
 	--icon-arrow-down-circle: "\F119";
 	--icon-box-arrow-up-right: "\F1C5";
+	--icon-box-seam: "\F1C7";
 	--icon-bug: "\F1DC";
 	--icon-bug-fill: "\F1DB";
 	--icon-clipboard2-check-fill: "\F724";
