Use own UI for stars, display npm cumulative downloads

--- a/assets/bootstrap-icons.css
+++ b/assets/bootstrap-icons.css
@@ -13,6 +13,7 @@
 	--icon-clipboard2-check-fill: "\F724";
 	--icon-comments: "\F268";
 	--icon-date: "\F1F6";
+	--icon-download: "\F30A";
 	--icon-edit: "\F4CA";
 	--icon-exclamation-triangle-fill: "\F33A";
 	--icon-eyeglasses: "\F343";
@@ -26,6 +27,7 @@
 	--icon-question-lg: "\F64E";
 	--icon-rss-fill: "\F521";
 	--icon-stopwatch: "\F597";
+	--icon-star: "\F588";
 	--icon-star-fill: "\F586";
 	--icon-tags: "\F5B2";
 }
