Simplified repo display

--- a/projects/index.njk
+++ b/projects/index.njk
@@ -36,7 +36,7 @@ or any of my pre-2011 entrepreneurial work.
 			<footer>
 				<a property="url">[replace(url, &quot;https://&quot;)]</a>
 				<span class="repo" class="[if(!repo, 'edit-only')]">
-					<a property="repo" href="https://github.com/[repo]" target="_blank" mv-attribute="none"></a>
+					<a href="https://github.com/[repo]" target="_blank" mv-attribute="none">[ if(starts(repo, 'leaverou/'), from(repo, "leaverou/"), repo)]</a>
 					<a mv-if="repo_stars > 999" href="https://github.com/[repo]/stargazers" target="_blank" class="stat stars"
 						property="repo_stars_formatted" mv-attribute="none" title="[repo_stars] stars on GitHub"></a>
 				</span>
