--- a/assets/style.postcss
+++ b/assets/style.postcss
@@ -489,6 +489,8 @@ blockquote {
 table {
 	border-spacing: 0;
 	border-collapse: collapse;
+	margin-bottom: 1em;
+	background: white;
 
 	th, td {
 		border: 1px solid var(--color-gray-80);
@@ -501,6 +503,10 @@ table {
 		font-family: var(--font-sans);
 		background: var(--color-accent);
 		color: white;
+	}
+
+	td {
+		font-variant-numeric: tabular-nums;
 	}
 }
 
